--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "@headlessui/react": "^0.1.1",
     "@tailwindcss/ui": "^0.6.2",
     "next": "latest",
+    "radium": "^0.26.0",
     "react": "^16.13.1",
+    "react-animations": "^1.0.0",
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
